fix: account find and network switch, non-block account details

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -425,7 +425,7 @@
   "invalid_address": "Невалиден адрес",
   "unknown_address": "Неизвестен адрес",
   "success_transaction_executed": "Транзакцията е успешно изпълнена",
-  "no_tokens_available": "Няма налични жетони",
+  "no_tokens_available": "Този акаунт не притежава токени",
   "trade_tokens_with": "Търгувайте жетони с",
   "simple": "Прост",
   "trader": "Търговец",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Въведете публичния ключ на получателя.",
   "enter_recipient_public_key_hint": "Акаунтът на получателя не е безопасен, така че прехвърляне без публичния ключ на получателя не е разрешено.",
   "confirm": "Потвърдете",
-  "select_account": "Изберете"
+  "select_account": "Изберете",
+  "account_not_verified": "Акаунтът не е намерен в мрежата. Избрахте ли правилната мрежа? Правилната фраза за възстановяване ли е?",
+  "account_verified": "Акаунтът е намерен в мрежата",
+  "error_storage_quota_exceeded": "Квотата за съхранение от страна на клиента беше надвишена. Опитайте да премахнете един или повече акаунти, за да освободите малко място.",
+  "you_own_no_token": "Все още нямате токени"
 }
