--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -425,7 +425,7 @@
   "invalid_address": "Μη έγκυρη διεύθυνση",
   "unknown_address": "Άγνωστη διεύθυνση",
   "success_transaction_executed": "Η συναλλαγή εκτελέστηκε με επιτυχία",
-  "no_tokens_available": "Δεν υπάρχουν διαθέσιμα διακριτικά",
+  "no_tokens_available": "Αυτός ο λογαριασμός δεν διαθέτει διακριτικά",
   "trade_tokens_with": "Συναλλαγές μάρκες με",
   "simple": "Απλός",
   "trader": "Εμπορος",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Εισαγάγετε το δημόσιο κλειδί του παραλήπτη.",
   "enter_recipient_public_key_hint": "Ο λογαριασμός του παραλήπτη δεν είναι ασφαλής, επομένως δεν επιτρέπεται η μεταφορά χωρίς το δημόσιο κλειδί του παραλήπτη.",
   "confirm": "Επιβεβαιώνω",
-  "select_account": "Επιλέγω"
+  "select_account": "Επιλέγω",
+  "account_not_verified": "Ο λογαριασμός δεν βρέθηκε στο δίκτυο. Διαλέξατε το σωστό δίκτυο; Είναι η σωστή φράση ανάκτησης;",
+  "account_verified": "Βρέθηκε λογαριασμός στο δίκτυο",
+  "error_storage_quota_exceeded": "Υπέρβαση του ορίου αποθήκευσης από την πλευρά του πελάτη. Δοκιμάστε να καταργήσετε έναν ή περισσότερους λογαριασμούς για να ελευθερώσετε χώρο.",
+  "you_own_no_token": "Δεν έχετε ακόμη κουπόνια"
 }
