--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -425,7 +425,7 @@
   "invalid_address": "अमान्य पता",
   "unknown_address": "अज्ञात पता",
   "success_transaction_executed": "लेन-देन सफलतापूर्वक निष्पादित",
-  "no_tokens_available": "कोई टोकन उपलब्ध नहीं है",
+  "no_tokens_available": "इस खाते के पास कोई टोकन नहीं है",
   "trade_tokens_with": "के साथ व्यापार टोकन",
   "simple": "सरल",
   "trader": "व्यापारी",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "प्राप्तकर्ता की सार्वजनिक कुंजी दर्ज करें।",
   "enter_recipient_public_key_hint": "प्राप्तकर्ता का खाता असुरक्षित है, इसलिए प्राप्तकर्ता की सार्वजनिक कुंजी के बिना स्थानांतरण की अनुमति नहीं है।",
   "confirm": "पुष्टि करें",
-  "select_account": "चुनना"
+  "select_account": "चुनना",
+  "account_not_verified": "नेटवर्क पर खाता नहीं मिला। क्या आपने सही नेटवर्क चुना? क्या यह सही वसूली मुहावरा है?",
+  "account_verified": "नेटवर्क पर खाता मिला",
+  "error_storage_quota_exceeded": "क्लाइंट साइड स्टोरेज कोटा पार हो गया था। कुछ स्थान खाली करने के लिए एक या अधिक खाते निकालने का प्रयास करें.",
+  "you_own_no_token": "आपके पास अभी तक कोई टोकन नहीं है"
 }
