--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -425,7 +425,7 @@
   "invalid_address": "Неверный адрес",
   "unknown_address": "Неизвестный адрес",
   "success_transaction_executed": "Транзакция успешно выполнена",
-  "no_tokens_available": "Нет доступных токенов",
+  "no_tokens_available": "Этот аккаунт не владеет токенами",
   "trade_tokens_with": "Обменять токены в",
   "simple": "Обычный",
   "trader": "Трейдер",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Введите открытый ключ получателя.",
   "enter_recipient_public_key_hint": "Учетная запись получателя небезопасна, поэтому перевод без открытого ключа получателя не допускается.",
   "confirm": "Подтверждать",
-  "select_account": "Выбирать"
+  "select_account": "Выбирать",
+  "account_not_verified": "Аккаунт не найден в сети. Вы выбрали правильную сеть? Это правильная фраза восстановления?",
+  "account_verified": "Аккаунт найден в сети",
+  "error_storage_quota_exceeded": "Превышена квота хранилища на стороне клиента. Попробуйте удалить одну или несколько учетных записей, чтобы освободить место.",
+  "you_own_no_token": "У вас еще нет токенов"
 }
