--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -425,7 +425,7 @@
   "invalid_address": "Погрешна адреса",
   "unknown_address": "Непозната адреса",
   "success_transaction_executed": "Трансакција је успешно извршена",
-  "no_tokens_available": "Токени нису доступни",
+  "no_tokens_available": "Овај налог не поседује токене",
   "trade_tokens_with": "Тргујте токенима са",
   "simple": "Једноставно",
   "trader": "Традер",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Унесите јавни кључ примаоца.",
   "enter_recipient_public_key_hint": "Налог примаоца није безбедан, па пренос без јавног кључа примаоца није дозвољен.",
   "confirm": "Потврди",
-  "select_account": "Изаберите"
+  "select_account": "Изаберите",
+  "account_not_verified": "Налог није пронађен на мрежи. Да ли сте изабрали исправну мрежу? Да ли је то тачна фраза за опоравак?",
+  "account_verified": "Налог је пронађен на мрежи",
+  "error_storage_quota_exceeded": "Премашена је квота складишта на страни клијента. Покушајте да уклоните један или више налога да бисте ослободили простор.",
+  "you_own_no_token": "Још увек немате ниједан жетон"
 }
