--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -425,7 +425,7 @@
   "invalid_address": "Недійсна адреса",
   "unknown_address": "Невідома адреса",
   "success_transaction_executed": "Транзакцію успішно виконано",
-  "no_tokens_available": "Жодних токенів немає",
+  "no_tokens_available": "Цей обліковий запис не володіє маркерами",
   "trade_tokens_with": "Торгуйте токенами за допомогою",
   "simple": "Простий",
   "trader": "Трейдер",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Введіть відкритий ключ одержувача.",
   "enter_recipient_public_key_hint": "Обліковий запис одержувача є небезпечним, тому передача без відкритого ключа одержувача не допускається.",
   "confirm": "Підтвердити",
-  "select_account": "Виберіть"
+  "select_account": "Виберіть",
+  "account_not_verified": "Обліковий запис не знайдено в мережі. Ви вибрали правильну мережу? Це правильна фраза відновлення?",
+  "account_verified": "Акаунт знайдено в мережі",
+  "error_storage_quota_exceeded": "Перевищено квоту пам’яті на стороні клієнта. Спробуйте видалити один або кілька облікових записів, щоб звільнити місце.",
+  "you_own_no_token": "У вас ще немає жетонів"
 }
