--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -425,7 +425,7 @@
   "invalid_address": "Adreça no vàlida",
   "unknown_address": "Adreça desconeguda",
   "success_transaction_executed": "La transacció s'ha executat correctament",
-  "no_tokens_available": "No hi ha fitxes disponibles",
+  "no_tokens_available": "Aquest compte no té fitxes",
   "trade_tokens_with": "Comerç de fitxes amb",
   "simple": "Senzill",
   "trader": "Comerciant",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Introduïu la clau pública del destinatari.",
   "enter_recipient_public_key_hint": "El compte del destinatari no és segur, de manera que no es permet una transferència sense la clau pública del destinatari.",
   "confirm": "Confirmeu",
-  "select_account": "Seleccioneu"
+  "select_account": "Seleccioneu",
+  "account_not_verified": "No s'ha trobat el compte a la xarxa. Heu triat la xarxa correcta? És la frase de recuperació correcta?",
+  "account_verified": "S'ha trobat un compte a la xarxa",
+  "error_storage_quota_exceeded": "S'ha superat la quota d'emmagatzematge del costat del client. Proveu d'eliminar un o més comptes per alliberar espai.",
+  "you_own_no_token": "Encara no tens cap fitxes"
 }
