--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -425,7 +425,7 @@
   "invalid_address": "Neteisingas adresas",
   "unknown_address": "Nežinomas adresas",
   "success_transaction_executed": "Sandoris sėkmingai įvykdytas",
-  "no_tokens_available": "Žetonų nėra",
+  "no_tokens_available": "Šiai paskyrai žetonų nepriklauso",
   "trade_tokens_with": "Prekyba žetonais su",
   "simple": "Paprasta",
   "trader": "Prekiautojas",
@@ -545,5 +545,9 @@
   "enter_recipient_public_key": "Įveskite gavėjo viešąjį raktą.",
   "enter_recipient_public_key_hint": "Gavėjo paskyra nesaugi, todėl pervedimas be gavėjo viešojo rakto neleidžiamas.",
   "confirm": "Patvirtinti",
-  "select_account": "Pasirinkite"
+  "select_account": "Pasirinkite",
+  "account_not_verified": "Paskyra tinkle nerasta. Ar pasirinkote tinkamą tinklą? Ar tai teisinga atkūrimo frazė?",
+  "account_verified": "Paskyra rasta tinkle",
+  "error_storage_quota_exceeded": "Viršyta kliento saugyklos kvota. Pabandykite pašalinti vieną ar daugiau paskyrų, kad atlaisvintumėte vietos.",
+  "you_own_no_token": "Dar neturite jokių žetonų"
 }
